<resources>
    <string name="app_name">Sofra</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_food">order food</string>
    <string name="sell_food">sell food</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="village">Village</string>
    <string name="password">Password</string>
    <string name="password_confim">Password Confim</string>
    <string name="register">Register</string>
    <string name="resturant_name">Resturant Name</string>
    <string name="minimum_order">Minimum Order</string>
    <string name="next">Next</string>
    <string name="communications">Communications</string>
    <string name="what_s_up">What,s Up</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="please_enter_your_email">please enter your email</string>
    <string name="send">Send</string>
    <string name="please_enter_the_code_send_to_your_email">please enter the code send to your email</string>
    <string name="code">code</string>
    <string name="please_enter_new_password">please enter new password</string>
    <string name="new_password">new password</string>
    <string name="password_confirm">new password confirmation</string>
    <string name="delivery_cost">delivery cost</string>
    <string name="open">open</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home_cyle">home</string>
    <string name="edit">Edit</string>
    <string name="your_comment">your comment</string>
    <string name="select_your_rate">select your rate</string>
    <string name="new_orders">new orders</string>
    <string name="current_orders">current orders</string>
    <string name="last_orders">last orders</string>
    <string name="completed_order">completed order</string>
    <string name="declined_order">declined order</string>
    <string name="add">Add</string>
    <string name="new_category">new category</string>
    <string name="price">price</string>
    <string name="agree">agree</string>
    <string name="call">call</string>
    <string name="closed">closed</string>
    <string name="please_wait">please wait</string>
    <string name="confirm_delivery">confirm delivery</string>
    <string name="my_categories">my Categories</string>
    <string name="cancel">cancel</string>
    <string name="state">State</string>
    <string name="details">details</string>
    <string name="add_offer">add new offer</string>
    <string name="add_image">add image</string>
    <string name="offer_name">offer name</string>
    <string name="breif_description">breif description</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="select_date">select date</string>
    <string name="what_is_your_message">what is your message ?</string>
    <string name="suggession">suggession</string>
    <string name="complainant">complainant</string>
    <string name="inquiry">inquiry</string>
    <string name="old_password">old password</string>
    <string name="change">change</string>
    <string name="special_order">special order</string>
    <string name="enter_your_order_here">enter your order here</string>
    <string name="quantity">quantity</string>
    <string name="confirm_order">confirm order</string>
    <string name="order_details">order details</string>
    <string name="add_details">add details</string>
    <string name="address">address</string>
    <string name="payment">payment</string>
    <string name="pay_when_delivered">pay when delivered</string>
    <string name="pay_online">pay online</string>
    <string name="total">total</string>
    <string name="total_cost">total cost</string>
    <string name="date">date</string>
    <string name="order_cost">order_cost</string>

    <string name="are_you_sure_you_want_to_logout">are you sure you want to exit ?</string>
    <string name="select_city">select city</string>
    <string name="sel_reg">select region</string>

    <string name="add_image_to_the_product">add image to the product</string>
    <string name="product_name">product name</string>
    <string name="short_description">short description</string>
    <string name="offer_price">offer price</string>
    <string name="search_your_restaurant_here">search your restaurant here</string>
    <string name="city">city</string>
    <string name="region">region</string>
    <string name="commission">commission</string>
    <string name="resturant_payments">resturant payments</string>
    <string name="app_commission">app commission</string>
    <string name="paid">paid</string>
    <string name="add_comment_or_rate">add comment or rate</string>
    <string name="rest">rest</string>

</resources>
