<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ChangePasswordFragment">
    <LinearLayout
        android:layout_margin="@dimen/album_dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:hint="@string/old_password"
            android:layout_height="@dimen/album_dp_50"
            android:id="@+id/changepassword_etold"
            android:background="@drawable/ed_forget"/>
        <EditText
            android:textColor="@color/black"
            android:textColorHint="@color/gray"

            android:layout_marginTop="@dimen/album_dp_20"
            android:layout_width="match_parent"
            android:hint="@string/new_password"
            android:layout_height="@dimen/album_dp_50"
            android:id="@+id/changepassword_etnew"
            android:background="@drawable/ed_forget"/>
        <EditText
            android:textColor="@color/black"
            android:textColorHint="@color/gray"

            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/album_dp_20"
            android:hint="@string/password_confim"
            android:layout_height="@dimen/album_dp_50"
            android:id="@+id/changepassword_etconfirmnew"
            android:background="@drawable/ed_forget"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:layout_gravity="center"
            android:id="@+id/changepassword_btnchange"
            android:layout_marginTop="@dimen/album_dp_20"
            android:background="@drawable/button_order"/>
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->


</RelativeLayout>