<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.NewOrderFragment">

    <!-- TODO: Update blank fragment layout -->
   <ScrollView
       android:layout_above="@id/neworder_btnconfirm"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:fillViewport="true"
       android:id="@+id/neworder_rel222"

       >
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/album_sp_20"
               android:textStyle="bold"
               android:layout_centerHorizontal="true"
               android:id="@+id/neworder_tvdetails"
               android:layout_marginTop="@dimen/album_dp_10"
               android:textColor="@color/colorPrimary"
               android:text="@string/order_details"
               android:fontFamily="sans-serif-black"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="@dimen/dim_300dp"
               android:layout_below="@id/neworder_tvdetails"
               android:background="@drawable/profileitembackground"
               android:layout_margin="@dimen/album_dp_10"
               android:hint="@string/add_details"
               android:gravity="top"
               android:paddingTop="@dimen/album_dp_10"
               android:textSize="@dimen/album_sp_20"
               android:textColor="@color/black"
               android:textColorHint="@color/gray"
               android:id="@+id/neworder_etdetails"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/dim_15sp"
               android:layout_alignParentEnd="true"
               android:id="@+id/neworder_tvaddress"
               android:layout_below="@id/neworder_etdetails"
               android:layout_marginTop="@dimen/album_dp_10"
               android:textColor="@color/colorPrimary"
               android:text="@string/address"
               android:fontFamily="sans-serif-black"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="@dimen/dim_50dp"
               android:layout_below="@id/neworder_tvaddress"
               android:background="@drawable/profileitembackground"
               android:layout_margin="@dimen/album_dp_10"
               android:hint="@string/address"
               android:gravity="top"
               android:paddingTop="@dimen/album_dp_10"
               android:textColorHint="@color/gray"
               android:textColor="@color/colorAccent"
               android:textSize="@dimen/album_sp_20"
               android:id="@+id/neworder_etaddress"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/dim_15sp"
               android:layout_alignParentEnd="true"
               android:id="@+id/neworder_tvpayment"
               android:layout_below="@id/neworder_etaddress"
               android:layout_marginTop="@dimen/album_dp_10"
               android:textColor="@color/colorPrimary"
               android:text="@string/payment"
               android:fontFamily="sans-serif-black"/>
           <RadioGroup
               android:layout_alignParentStart="true"
               android:layout_centerHorizontal="true"
               android:layout_width="match_parent"
               android:gravity="center"
               android:layout_height="@dimen/album_dp_50"
               android:orientation="horizontal"
               android:id="@+id/neworder_rgpayment"
               android:layout_below="@id/neworder_tvpayment"
               >
               <RadioButton
                   android:textColor="@color/colorPrimary"

                   android:layout_marginStart="@dimen/album_dp_10"
                   android:layout_marginEnd="@dimen/album_dp_10"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:button="@drawable/rbtnback"
                   android:id="@+id/neworder_btncash"
                   android:checked="false"
                   android:text="@string/pay_when_delivered"/>
               <RadioButton
                   android:textColor="@color/colorPrimary"

                   android:layout_marginEnd="@dimen/album_dp_10"
                   android:layout_marginStart="@dimen/album_dp_10"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/neworder_btnonline"
                   android:checked="false"
                   android:button="@drawable/rbtnback"
                   android:text="@string/pay_online"/>
           </RadioGroup>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/album_sp_20"
               android:textStyle="bold"
               android:layout_alignParentStart="true"        android:id="@+id/neworder_tvtotal"
               android:layout_below="@id/neworder_rgpayment"
               android:layout_marginTop="@dimen/album_dp_10"
               android:textColor="@color/colorPrimary"
               android:text="@string/total"
               android:fontFamily="sans-serif-black"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/album_sp_20"
               android:textStyle="bold"
               android:layout_alignParentStart="true"
               android:id="@+id/neworder_tvdeliverycost"
               android:layout_below="@id/neworder_tvtotal"
               android:layout_marginTop="@dimen/album_dp_10"
               android:textColor="@color/colorPrimary"
               android:text="@string/delivery_cost"
               android:fontFamily="sans-serif-black"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/album_sp_20"
               android:textStyle="bold"
               android:layout_alignParentStart="true"
               android:id="@+id/neworder_tvtotalcost"
               android:layout_below="@id/neworder_tvdeliverycost"
               android:layout_marginTop="@dimen/album_dp_10"
               android:textColor="@color/colorPrimary"
               android:text="@string/total_cost"
               android:fontFamily="sans-serif-black"/>
       </RelativeLayout>
   </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order"
android:layout_alignParentBottom="true"        android:layout_centerHorizontal="true"
        android:background="@drawable/button_order"
        android:layout_marginTop="@dimen/album_dp_20"
        android:id="@+id/neworder_btnconfirm"/>




</RelativeLayout>