<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".view.fragment.NewPasswordFragment">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login"
        android:fillViewport="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/newpasswordfragment_tventercode"
                android:layout_marginTop="@dimen/dim_50dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50dp"
                android:text="@string/please_enter_the_code_send_to_your_email"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/dim_20sp"/>
            <EditText
                android:layout_margin="@dimen/dim_20dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50dp"
                android:hint="@string/code"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:layout_below="@id/newpasswordfragment_tventercode"
                android:layout_marginTop="@dimen/dim_20dp"
                android:id="@+id/newpasswordfragment_edcode"
                android:inputType="textEmailAddress"
                android:background="@drawable/ed_forget"/>
            <TextView
                android:id="@+id/newpasswordfragment_tventerpassword"
                android:layout_below="@id/newpasswordfragment_edcode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50dp"
                android:text="@string/please_enter_new_password"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/dim_20sp"/>
            <EditText
                android:layout_marginRight="@dimen/dim_20dp"
                android:layout_marginLeft="@dimen/dim_20dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50dp"
                android:hint="@string/new_password"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:layout_below="@id/newpasswordfragment_tventerpassword"
                android:layout_marginTop="@dimen/dim_20dp"
                android:id="@+id/newpasswordfragment_ednewpassword"
                android:inputType="textEmailAddress"
                android:background="@drawable/ed_forget"/>
            <EditText
                android:layout_marginRight="@dimen/dim_20dp"
                android:layout_marginLeft="@dimen/dim_20dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50dp"
                android:hint="@string/password_confirm"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:layout_below="@id/newpasswordfragment_ednewpassword"
                android:layout_marginTop="@dimen/dim_10dp"
                android:id="@+id/newpasswordfragment_ednewpasswordconfirm"
                android:inputType="textEmailAddress"
                android:background="@drawable/ed_forget"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50dp"
                android:layout_below="@id/newpasswordfragment_ednewpasswordconfirm"
                android:layout_margin="@dimen/dim_50dp"
                android:background="@drawable/button_order"
                android:textSize="@dimen/dim_20sp"
                android:textColor="@color/white"
                android:text="@string/send"
                android:id="@+id/newpasswordfragment_btnsend"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>