<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.more.ContactFragment">

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:src="@drawable/ic_contactimage"
       android:layout_margin="@dimen/album_dp_10"
       android:id="@+id/contactfragment_ivcontact"/>
    <ScrollView
        android:layout_below="@id/contactfragment_ivcontact"
        android:layout_above="@id/contactfragment_btnsend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:fontFamily="@font/font5"

                android:paddingStart="@dimen/dim_5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_dp_50"
            android:hint="@string/name"
            android:id="@+id/contactfragment_edname"
            android:background="@drawable/ed_forget"
            android:layout_margin="@dimen/album_dp_20"/>
            <EditText
                android:fontFamily="@font/font5"

                android:textColorHint="@color/gray"
                android:paddingStart="@dimen/dim_5dp"
android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_50"
                android:hint="@string/email"
                android:id="@+id/contactfragment_edemail"
                android:background="@drawable/ed_forget"
                android:layout_marginTop="@dimen/dim_5dp"
                android:layout_marginRight="@dimen/album_dp_20"
                android:layout_marginLeft="@dimen/album_dp_20"/>
            <EditText
                android:fontFamily="@font/font5"

                android:textColor="@color/black"
                android:textColorHint="@color/gray"

                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_50"
                android:hint="@string/phone"
                android:id="@+id/contactfragment_edphone"
                android:background="@drawable/ed_forget"
                android:layout_marginTop="@dimen/dim_5dp"
                android:paddingStart="@dimen/dim_5dp"
                android:layout_marginRight="@dimen/album_dp_20"
                android:layout_marginLeft="@dimen/album_dp_20"/>
            <EditText
                android:fontFamily="@font/font5"

                android:paddingStart="@dimen/dim_5dp"

                android:textColorHint="@color/gray"
android:textColor="@color/black"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_200"
                android:gravity="top"
                android:paddingTop="@dimen/album_dp_10"
                android:hint="@string/what_is_your_message"
                android:id="@+id/contactfragment_edtext"
                android:background="@drawable/ed_forget"
                android:layout_marginTop="@dimen/dim_5dp"
                android:layout_marginRight="@dimen/album_dp_20"
                android:layout_marginLeft="@dimen/album_dp_20"/>
            <RadioGroup

                android:id="@+id/contactfragment_rgtype"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:fontFamily="@font/font5"

                    android:layout_margin="@dimen/dim_5dp"
                    android:button="@drawable/radiobtncontact"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dim_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complainant"
                    android:id="@+id/contactfragment_rbcomplainant"/>
                <RadioButton
                    android:fontFamily="@font/font5"

                    android:layout_margin="@dimen/dim_5dp"
                    android:button="@drawable/radiobtncontact"
                    android:textSize="@dimen/dim_15sp"
                    android:textColor="@color/black"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggession"
                    android:id="@+id/contactfragment_rbsuggession"/>
                <RadioButton
                    android:fontFamily="@font/font5"

                    android:layout_margin="@dimen/dim_5dp"
                    android:button="@drawable/radiobtncontact"
                    android:textSize="@dimen/dim_15sp"
                    android:textColor="@color/black"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inquiry"
                    android:id="@+id/contactfragment_rbinquiry"/>
            </RadioGroup>

        </LinearLayout>
    </ScrollView>
    <Button
        android:fontFamily="@font/font5"

        android:layout_margin="@dimen/album_dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:background="@drawable/button_order"
        android:layout_alignParentBottom="true"
        android:id="@+id/contactfragment_btnsend"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>