<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".view.fragment.ForgetPasswordFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        >
        <TextView
            android:id="@+id/forgetpassword_tvemail"
            android:layout_marginTop="@dimen/dim_50dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_50dp"
            android:text="@string/please_enter_your_email"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_20sp"/>
        <EditText
            android:layout_margin="@dimen/dim_20dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_50dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:layout_below="@id/forgetpassword_tvemail"
            android:layout_marginTop="@dimen/dim_20dp"
            android:id="@+id/forgetpassword_edemail"
            android:inputType="textEmailAddress"
            android:background="@drawable/ed_forget"/>
        <Button
            android:id="@+id/forgetpassword_btn_send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button_order"
            android:layout_margin="@dimen/dim_50dp"
            android:text="@string/send"/>



    </RelativeLayout>

</RelativeLayout>